# exordium

CVSROOT/: config  cvsignore  loginfo
services/: .cvsignore  AUTHORS  CHANGES  ChangeLog  IDEAS  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure.ac  configure.in  dev.sh
services/autoconf/: configure.in
services/autogen/: fieldtypes.def  language.def
services/doc/: Bot-Interface  Database-Public-Api  Functions  Module-Coding  example.conf
services/include/: .cvsignore
services/include/exordium/: .cvsignore  bot.h  chan.h  channel.h  conf.h  config.h  config.h.in  console.h  dchan.h  events.h  game.h  ircdome.h  log.h  love.h  module.h  modules.h  mysql.h  nick.h  nickname.h  note.h  parser.h  regchannel.h  reguser.h  serv.h  server.h  service.h  services.h  singleton.h  sql.h  static.h  user.h  userbase.h  utils.h
services/include/exordium/database/: base.h  database.h  result.h  table.h.tpl
services/include/exordium/database/mysql/: dbmysql.h
services/include/exordium/database/postgresql/: dbpgsql.h
services/install/: .cvsignore  README  en.exordium.lang  language.tpl
services/source/: .cvsignore  Makefile  Makefile.am  Makefile.in  main.cpp  module.cpp  services.conf  services.logu  version.h
services/source/lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  channel.cpp  conf.cpp  config.cpp  config.h  console.cpp  console.h  console_language.tpl  core_language.tpl  dchan.cpp  ircdome.cpp  log.cpp  logger.cpp  logger.h  module.cpp  modules.cpp  modules.h  nickname.cpp  parser.cpp  parser.h  regchannel.cpp  reguser.cpp  server.cpp  service.cpp  services.cpp  services.h  sql.cpp  static.cpp  user.cpp  userbase.cpp  utils.cpp
services/source/lib/database/: database.cpp
services/source/lib/database/mysql/: dbmysql.cpp  dbmysql.h  dbmysqlres.cpp  dbmysqlres.cpp~  dbmysqlres.h  dbmysqlres.h~
services/source/lib/database/postgresql/: dbpgsql.cpp  dbpgsql.h
services/source/libbank/: Makefile.am  bank.cpp  bank.h  tables.cpp  tables.h
services/source/modules/: Makefile  Makefile.am  Makefile.in  bot.cpp  chan.cpp  nick.cpp  note.cpp  oper.cpp  serv.cpp  stats.cpp  vote.cpp
services/source/modules/common/: README
services/source/modules/game/: Makefile.am  Makefile.in  README  README.Exordi8  channelgame.cpp  channelgame.h  config.cpp  config.h  exordi8.cpp  exordi8.h  game.cpp  game.h  hangman.cpp  hangman.h  module.cpp
services/source/modules/game/cards/: Makefile.am  Makefile.in  README  card.cpp  card.h  hand.cpp  hand.h  pack.cpp  pack.h
services/source/modules/include/: bot.h  chan.h  nick.h  note.h  oper.h  serv.h  stats.h  vote.h
services/source/modules/love/: Makefile.am  Makefile.in  README  love.cpp  love.h  module.cpp
services/source/modules/mod.bot/: bot.cpp  bot.h  module.cpp
services/source/modules/mod.chan/: .cvsignore  chan.cpp  chan.h  language.tpl  module.cpp  tables.cpp  tables.h
services/source/modules/mod.credits/: Makefile.am  credits.cpp  credits.h  language.tpl  module.cpp
services/source/modules/mod.game/: Makefile.am  channelgame.cpp  channelgame.h  config.cpp  config.h  exordi8.cpp  exordi8.h  factory.h  game.cpp  game.h  hangman.cpp  hangman.h  module.cpp  poker.cpp  poker.h
services/source/modules/mod.game/cards/: Makefile  Makefile.am  Makefile.in  card.cpp  card.h  hand.cpp  hand.h  pack.cpp  pack.h  shuffler.h  stock.h
services/source/modules/mod.game/dice/: README  die.h
services/source/modules/mod.help/: help.cpp  help.h  module.cpp
services/source/modules/mod.love/: Makefile  Makefile.am  Makefile.in  README  language.tpl  love.cpp  love.cpp~  love.h  module.cpp  tables.cpp  tables.h
services/source/modules/mod.nick/: .cvsignore  commands.def  commands.h  commands.tpl  language.tpl  module.cpp  nick.cpp  nick.h  tables.cpp  tables.h
services/source/modules/mod.note/: language.tpl  module.cpp  note.cpp  note.h  tables.cpp  tables.h
services/source/modules/mod.oper/: .cvsignore  language.tpl  module.cpp  oper.cpp  oper.h
services/source/modules/mod.serv/: language.tpl  module.cpp  serv.cpp  serv.h  tables.cpp  tables.h
services/source/modules/mod.stats/: module.cpp  stats.cpp  stats.h  tables.cpp  tables.h
services/source/modules/mod.vote/: module.cpp  vote.cpp  vote.h
services/utils/clones/: cloner.php
services/utils/email-sender/: mailer.php
services/utils/logger/: .cvsignore  logger.php
services/utils/mailer/: mailer.php
sql/: MySQL-DB-Structure.sql  PgSQL-DB-Structure.sql
www/: base.php  confirm.php  error.php  index.php  logout.php  main.css  new.css
www/funcs/: TEMPLATE.php  addbuild.php  addchanuser.php  addcommand.php  addhelp.php  delbuild.php  delchanuser.php  delcommand.php  delhelp.php  deregchan.php  listbuilds.php  listchan.php  listchanusers.php  listcommands.php  listhelp.php  listlog.php  managechan.php  modbuild.php  modchan.php  modchanuser.php  modcommand.php  modhelp.php  moduserinfo.php  regchan.php  regnick.php
www/htdocs/: index.html
www/include/: Channel.php  Mysql.php  Nick.php  footer.php  global.inc  header.php
