# This file is a part of Exordium Network Services - (c) 2002 IRCDome Development Team                             
# $Author$        
# $Date$                      
# $Id$                                                                        


echo "* * * * * * * * * * * * * * * * * * *"
echo "*     IRCDome Network Services      *"
echo "*     ------- ------- --------      *"
echo "*                                   *"
echo "* We will now generate a configure  *"
echo "*  script.  Please report bugs to   *"
echo "*       coding@ircdome.org          *"
echo "* * * * * * * * * * * * * * * * * * *"
echo ""
# Process this file with autoconf to produce a configure script.
FULL-PACKAGE-NAME=IRCDomeServices
VERSION=0.0
BUG-REPORT-ADDRESS=coding@ircdome.org
AC_SUBST(FULL-PACKAGE-NAME)
AC_SUBST(VERSION)
AC_SUBST(BUG-REPORT-ADDRESS)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([include/exordium/config.h.in])
AC_CONFIG_HEADER([include/exordium/config.h])
AC_MSG_CHECKING([what to set CXXFLAGS to])
if test "$CXXFLAGS" = ""; then
	CXXFLAGS="-O0 -g"
	AC_MSG_RESULT(['$CXXFLAGS' (default)])
else
	AC_MSG_RESULT(['$CXXFLAGS' (given)])
fi

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_CHECK_PROG(RM, rm, rm -f, del)
AC_CHECK_PROG(LD, ld, ld)

# Checks for libraries+functions
AC_CHECK_LIB(resolv, res_init)
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_FNMATCH
AC_FUNC_VPRINTF
AC_FUNC_GETLOADAVG
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([gethostbyname gettimeofday memset select socket strchr])
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([mysqlclient], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_MSG_CHECKING([Whether to enable Debug mode])
AC_ARG_ENABLE(debug-mode,[
	--enable-debug-mode		(Default is disabled)
	This enables (very) verbose output from services, primarily for
	tracking down that annoying little bug :-).
	],[
	if test "$enableval" = "no"; then
     		AC_MSG_RESULT(no)
   	else
     		AC_MSG_RESULT(yes)
     		AC_DEFINE(DEBUG)
   fi
 ],[
   AC_MSG_RESULT([no (default)])
])
AC_MSG_CHECKING([for what language to use as default])
AC_ARG_ENABLE(language,
[
	--enable-language=language 	Default language for services
					Default: English
					Look in lib/languages for more.],
[
	if test "$enableval"; then
		LANGUAGE=$enableval
		AC_MSG_RESULT([$enableval])
	fi
],[LANGUAGE="English"])
AC_MSG_RESULT([English (default)])
AC_SUBST(LANGUAGE)



AC_CONFIG_FILES([source/Makefile
                 source/lib/Makefile source/modules/Makefile Makefile] )
AC_OUTPUT
